// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReplyForm /> should render correctly when anonymous participation is allowed 1`] = `
<ReplyFormstyle__QuestionnaireContainer
  id="reply-form"
  onSubmit={[MockFunction]}
>
  <ReplyFormstyle__ReplyFormContainer
    id="reply-form-container"
  >
    <FieldArray
      change={[MockFunction]}
      component={[Function]}
      disabled={false}
      divClassName="container-questions"
      form="formName"
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      memoize={[Function]}
      memoizeId="2"
      name="responses"
      questions={
        Array [
          Object {
            "__typename": "SimpleQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 0,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "",
            "hidden": false,
            "id": "10",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 2,
            "position": 1,
            "private": false,
            "required": true,
            "title": "Êtes-vous satisfait que la ville de Paris soit candidate à l'organisation des JO de 2024 ?",
            "type": "text",
            "validationRule": null,
          },
        ]
      }
      reply={null}
      responses={
        Array [
          Object {
            "question": "Nelson Monfort parle-t-il:",
            "value": "Trop fort (Mon sonotone est tout neuf)",
          },
          Object {
            "question": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "value": Object {
              "labels": Array [
                "Superman",
              ],
              "other": "Pikachu",
            },
          },
        ]
      }
      typeForm="questionnaire"
      unstable__enableCapcoUiDs={true}
    />
  </ReplyFormstyle__ReplyFormContainer>
  <ReplyFormstyle__ButtonGroupSubmit
    className="btn-toolbar"
  >
    <Connect(SubmitButton)
      bsStyle="info"
      disabled={true}
      id="formName-submit-create-reply"
      label="global.send"
      onSubmit={[Function]}
      style={
        Object {
          "backgroundColor": "#fff000",
          "borderColor": "#fff000",
        }
      }
      type="submit"
    />
  </ReplyFormstyle__ButtonGroupSubmit>
</ReplyFormstyle__QuestionnaireContainer>
`;

exports[`<ReplyForm /> should render correctly with a select with a lot of choices 1`] = `
<ReplyFormstyle__QuestionnaireContainer
  id="reply-form"
  onSubmit={[MockFunction]}
>
  <ReplyFormstyle__ReplyFormContainer
    id="reply-form-container"
  >
    <FieldArray
      change={[MockFunction]}
      component={[Function]}
      disabled={true}
      divClassName="container-questions"
      form="formName"
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      memoize={[Function]}
      memoizeId="2"
      name="responses"
      questions={
        Array [
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "20",
                    "image": null,
                    "title": "Athlétisme",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "21",
                    "image": null,
                    "title": "Natation",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "22",
                    "image": null,
                    "title": "Sports collectifs",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "23",
                    "image": null,
                    "title": "Sports individuels",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 4,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Plusieurs choix sont possibles",
            "hidden": false,
            "id": "11",
            "isOtherAllowed": true,
            "jumps": Array [],
            "number": 3,
            "position": 2,
            "private": false,
            "required": false,
            "title": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "type": "checkbox",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 31",
                    "id": "31",
                    "image": null,
                    "title": "Je suis le choix 31",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 32",
                    "id": "32",
                    "image": null,
                    "title": "Je suis le choix 32",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 33",
                    "id": "33",
                    "image": null,
                    "title": "Je suis le choix 33",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 34",
                    "id": "34",
                    "image": null,
                    "title": "Je suis le choix 34",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 35",
                    "id": "35",
                    "image": null,
                    "title": "Je suis le choix 35",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 36",
                    "id": "36",
                    "image": null,
                    "title": "Je suis le choix 36",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 37",
                    "id": "37",
                    "image": null,
                    "title": "Je suis le choix 37",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 38",
                    "id": "38",
                    "image": null,
                    "title": "Je suis le choix 38",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 39",
                    "id": "39",
                    "image": null,
                    "title": "Je suis le choix 39",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 40",
                    "id": "40",
                    "image": null,
                    "title": "Je suis le choix 40",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 41",
                    "id": "41",
                    "image": null,
                    "title": "Je suis le choix 41",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 42",
                    "id": "42",
                    "image": null,
                    "title": "Je suis le choix 42",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 43",
                    "id": "43",
                    "image": null,
                    "title": "Je suis le choix 43",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 44",
                    "id": "44",
                    "image": null,
                    "title": "Je suis le choix 44",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 45",
                    "id": "45",
                    "image": null,
                    "title": "Je suis le choix 45",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 46",
                    "id": "46",
                    "image": null,
                    "title": "Je suis le choix 46",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 47",
                    "id": "47",
                    "image": null,
                    "title": "Je suis le choix 47",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 48",
                    "id": "48",
                    "image": null,
                    "title": "Je suis le choix 48",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 49",
                    "id": "49",
                    "image": null,
                    "title": "Je suis le choix 49",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 50",
                    "id": "50",
                    "image": null,
                    "title": "Je suis le choix 50",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 51",
                    "id": "51",
                    "image": null,
                    "title": "Je suis le choix 51",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 52",
                    "id": "52",
                    "image": null,
                    "title": "Je suis le choix 52",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 53",
                    "id": "53",
                    "image": null,
                    "title": "Je suis le choix 53",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 54",
                    "id": "54",
                    "image": null,
                    "title": "Je suis le choix 54",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 55",
                    "id": "55",
                    "image": null,
                    "title": "Je suis le choix 55",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 56",
                    "id": "56",
                    "image": null,
                    "title": "Je suis le choix 56",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 57",
                    "id": "57",
                    "image": null,
                    "title": "Je suis le choix 57",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 58",
                    "id": "58",
                    "image": null,
                    "title": "Je suis le choix 58",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 59",
                    "id": "59",
                    "image": null,
                    "title": "Je suis le choix 59",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "Je suis la description du choix 60",
                    "id": "60",
                    "image": null,
                    "title": "Je suis le choix 60",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": true,
              },
              "totalCount": 30,
            },
            "description": null,
            "destinationJumps": Array [],
            "helpText": "Je suis censé t'aider",
            "hidden": false,
            "id": "15",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 5,
            "position": 6,
            "private": false,
            "required": false,
            "title": "Ton choix préféré ?",
            "type": "select",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "28",
                    "image": null,
                    "title": "Pas assez fort (Mon sonotone est en panne)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "29",
                    "image": null,
                    "title": "Assez fort (Mon sonotone est mal réglé)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "30",
                    "image": null,
                    "title": "Trop fort (Mon sonotone est tout neuf)",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 3,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Merci de répondre sincèrement",
            "hidden": false,
            "id": "14",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 6,
            "position": 5,
            "private": false,
            "required": false,
            "title": "Nelson Monfort parle-t-il:",
            "type": "ranking",
            "validationRule": null,
          },
        ]
      }
      reply={null}
      responses={
        Array [
          Object {
            "question": "Nelson Monfort parle-t-il:",
            "value": "Trop fort (Mon sonotone est tout neuf)",
          },
          Object {
            "question": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "value": Object {
              "labels": Array [
                "Superman",
              ],
              "other": "Pikachu",
            },
          },
        ]
      }
      typeForm="questionnaire"
      unstable__enableCapcoUiDs={true}
    />
  </ReplyFormstyle__ReplyFormContainer>
  <ReplyFormstyle__ButtonGroupSubmit
    className="btn-toolbar"
  >
    <Connect(SubmitButton)
      bsStyle="info"
      disabled={true}
      id="formName-submit-create-reply"
      label="global.send"
      onSubmit={[Function]}
      style={
        Object {
          "backgroundColor": "#fff000",
          "borderColor": "#fff000",
        }
      }
      type="submit"
    />
  </ReplyFormstyle__ButtonGroupSubmit>
</ReplyFormstyle__QuestionnaireContainer>
`;

exports[`<ReplyForm /> should render correctly with equal required and facultative fields 1`] = `
<ReplyFormstyle__QuestionnaireContainer
  id="reply-form"
  onSubmit={[MockFunction]}
>
  <ReplyFormstyle__ReplyFormContainer
    id="reply-form-container"
  >
    <FieldArray
      change={[MockFunction]}
      component={[Function]}
      disabled={true}
      divClassName="container-questions"
      form="formName"
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      memoize={[Function]}
      memoizeId="2"
      name="responses"
      questions={
        Array [
          Object {
            "__typename": "SimpleQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 0,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "",
            "hidden": false,
            "id": "10",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 2,
            "position": 1,
            "private": false,
            "required": true,
            "title": "Êtes-vous satisfait que la ville de Paris soit candidate à l'organisation des JO de 2024 ?",
            "type": "text",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "24",
                    "image": null,
                    "title": "Maxime Arrouard",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "25",
                    "image": null,
                    "title": "Spylou Super Sayen",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "26",
                    "image": null,
                    "title": "Cyril Lage",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "27",
                    "image": null,
                    "title": "Superman",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 4,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Un seul choix possible",
            "hidden": false,
            "id": "12",
            "isOtherAllowed": true,
            "jumps": Array [],
            "number": 4,
            "position": 3,
            "private": false,
            "required": true,
            "title": "Quel est ton athlète favori ?",
            "type": "radio",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "28",
                    "image": null,
                    "title": "Pas assez fort (Mon sonotone est en panne)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "29",
                    "image": null,
                    "title": "Assez fort (Mon sonotone est mal réglé)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "30",
                    "image": null,
                    "title": "Trop fort (Mon sonotone est tout neuf)",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 3,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Merci de répondre sincèrement",
            "hidden": false,
            "id": "13",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 5,
            "position": 4,
            "private": false,
            "required": false,
            "title": "Nelson Monfort parle-t-il:",
            "type": "select",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "28",
                    "image": null,
                    "title": "Pas assez fort (Mon sonotone est en panne)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "29",
                    "image": null,
                    "title": "Assez fort (Mon sonotone est mal réglé)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "30",
                    "image": null,
                    "title": "Trop fort (Mon sonotone est tout neuf)",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 3,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Merci de répondre sincèrement",
            "hidden": false,
            "id": "14",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 6,
            "position": 5,
            "private": false,
            "required": false,
            "title": "Nelson Monfort parle-t-il:",
            "type": "ranking",
            "validationRule": null,
          },
        ]
      }
      reply={null}
      responses={
        Array [
          Object {
            "question": "Nelson Monfort parle-t-il:",
            "value": "Trop fort (Mon sonotone est tout neuf)",
          },
          Object {
            "question": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "value": Object {
              "labels": Array [
                "Superman",
              ],
              "other": "Pikachu",
            },
          },
        ]
      }
      typeForm="questionnaire"
      unstable__enableCapcoUiDs={true}
    />
  </ReplyFormstyle__ReplyFormContainer>
  <ReplyFormstyle__ButtonGroupSubmit
    className="btn-toolbar"
  >
    <Connect(SubmitButton)
      bsStyle="info"
      disabled={true}
      id="formName-submit-create-reply"
      label="global.send"
      onSubmit={[Function]}
      style={
        Object {
          "backgroundColor": "#fff000",
          "borderColor": "#fff000",
        }
      }
      type="submit"
    />
  </ReplyFormstyle__ButtonGroupSubmit>
</ReplyFormstyle__QuestionnaireContainer>
`;

exports[`<ReplyForm /> should render correctly with majority of required fields 1`] = `
<ReplyFormstyle__QuestionnaireContainer
  id="reply-form"
  onSubmit={[MockFunction]}
>
  <ReplyFormstyle__ReplyFormContainer
    id="reply-form-container"
  >
    <FieldArray
      change={[MockFunction]}
      component={[Function]}
      disabled={true}
      divClassName="container-questions"
      form="formName"
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      memoize={[Function]}
      memoizeId="2"
      name="responses"
      questions={
        Array [
          Object {
            "__typename": "SimpleQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 0,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "",
            "hidden": false,
            "id": "10",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 2,
            "position": 1,
            "private": false,
            "required": true,
            "title": "Êtes-vous satisfait que la ville de Paris soit candidate à l'organisation des JO de 2024 ?",
            "type": "text",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "24",
                    "image": null,
                    "title": "Maxime Arrouard",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "25",
                    "image": null,
                    "title": "Spylou Super Sayen",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "26",
                    "image": null,
                    "title": "Cyril Lage",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "27",
                    "image": null,
                    "title": "Superman",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 4,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Un seul choix possible",
            "hidden": false,
            "id": "12",
            "isOtherAllowed": true,
            "jumps": Array [],
            "number": 4,
            "position": 3,
            "private": false,
            "required": true,
            "title": "Quel est ton athlète favori ?",
            "type": "radio",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "28",
                    "image": null,
                    "title": "Pas assez fort (Mon sonotone est en panne)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "29",
                    "image": null,
                    "title": "Assez fort (Mon sonotone est mal réglé)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "30",
                    "image": null,
                    "title": "Trop fort (Mon sonotone est tout neuf)",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 3,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Merci de répondre sincèrement",
            "hidden": false,
            "id": "14",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 6,
            "position": 5,
            "private": false,
            "required": false,
            "title": "Nelson Monfort parle-t-il:",
            "type": "ranking",
            "validationRule": null,
          },
        ]
      }
      reply={null}
      responses={
        Array [
          Object {
            "question": "Nelson Monfort parle-t-il:",
            "value": "Trop fort (Mon sonotone est tout neuf)",
          },
          Object {
            "question": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "value": Object {
              "labels": Array [
                "Superman",
              ],
              "other": "Pikachu",
            },
          },
        ]
      }
      typeForm="questionnaire"
      unstable__enableCapcoUiDs={true}
    />
  </ReplyFormstyle__ReplyFormContainer>
  <ReplyFormstyle__ButtonGroupSubmit
    className="btn-toolbar"
  >
    <Connect(SubmitButton)
      bsStyle="info"
      disabled={true}
      id="formName-submit-create-reply"
      label="global.send"
      onSubmit={[Function]}
      style={
        Object {
          "backgroundColor": "#fff000",
          "borderColor": "#fff000",
        }
      }
      type="submit"
    />
  </ReplyFormstyle__ButtonGroupSubmit>
</ReplyFormstyle__QuestionnaireContainer>
`;

exports[`<ReplyForm /> should render correctly with minority of required fields 1`] = `
<ReplyFormstyle__QuestionnaireContainer
  id="reply-form"
  onSubmit={[MockFunction]}
>
  <ReplyFormstyle__ReplyFormContainer
    id="reply-form-container"
  >
    <FieldArray
      change={[MockFunction]}
      component={[Function]}
      disabled={true}
      divClassName="container-questions"
      form="formName"
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      memoize={[Function]}
      memoizeId="2"
      name="responses"
      questions={
        Array [
          Object {
            "__typename": "SimpleQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 0,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "",
            "hidden": false,
            "id": "10",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 2,
            "position": 1,
            "private": false,
            "required": true,
            "title": "Êtes-vous satisfait que la ville de Paris soit candidate à l'organisation des JO de 2024 ?",
            "type": "text",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "20",
                    "image": null,
                    "title": "Athlétisme",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "21",
                    "image": null,
                    "title": "Natation",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "22",
                    "image": null,
                    "title": "Sports collectifs",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "23",
                    "image": null,
                    "title": "Sports individuels",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 4,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Plusieurs choix sont possibles",
            "hidden": false,
            "id": "11",
            "isOtherAllowed": true,
            "jumps": Array [],
            "number": 3,
            "position": 2,
            "private": false,
            "required": false,
            "title": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "type": "checkbox",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "24",
                    "image": null,
                    "title": "Maxime Arrouard",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "25",
                    "image": null,
                    "title": "Spylou Super Sayen",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "26",
                    "image": null,
                    "title": "Cyril Lage",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "27",
                    "image": null,
                    "title": "Superman",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 4,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Un seul choix possible",
            "hidden": false,
            "id": "12",
            "isOtherAllowed": true,
            "jumps": Array [],
            "number": 4,
            "position": 3,
            "private": false,
            "required": true,
            "title": "Quel est ton athlète favori ?",
            "type": "radio",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "28",
                    "image": null,
                    "title": "Pas assez fort (Mon sonotone est en panne)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "29",
                    "image": null,
                    "title": "Assez fort (Mon sonotone est mal réglé)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "30",
                    "image": null,
                    "title": "Trop fort (Mon sonotone est tout neuf)",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 3,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Merci de répondre sincèrement",
            "hidden": false,
            "id": "13",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 5,
            "position": 4,
            "private": false,
            "required": false,
            "title": "Nelson Monfort parle-t-il:",
            "type": "select",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "28",
                    "image": null,
                    "title": "Pas assez fort (Mon sonotone est en panne)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "29",
                    "image": null,
                    "title": "Assez fort (Mon sonotone est mal réglé)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "30",
                    "image": null,
                    "title": "Trop fort (Mon sonotone est tout neuf)",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 3,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Merci de répondre sincèrement",
            "hidden": false,
            "id": "14",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 6,
            "position": 5,
            "private": false,
            "required": false,
            "title": "Nelson Monfort parle-t-il:",
            "type": "ranking",
            "validationRule": null,
          },
        ]
      }
      reply={null}
      responses={
        Array [
          Object {
            "question": "Nelson Monfort parle-t-il:",
            "value": "Trop fort (Mon sonotone est tout neuf)",
          },
          Object {
            "question": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "value": Object {
              "labels": Array [
                "Superman",
              ],
              "other": "Pikachu",
            },
          },
        ]
      }
      typeForm="questionnaire"
      unstable__enableCapcoUiDs={true}
    />
  </ReplyFormstyle__ReplyFormContainer>
  <ReplyFormstyle__ButtonGroupSubmit
    className="btn-toolbar"
  >
    <Connect(SubmitButton)
      bsStyle="info"
      disabled={true}
      id="formName-submit-create-reply"
      label="global.send"
      onSubmit={[Function]}
      style={
        Object {
          "backgroundColor": "#fff000",
          "borderColor": "#fff000",
        }
      }
      type="submit"
    />
  </ReplyFormstyle__ButtonGroupSubmit>
</ReplyFormstyle__QuestionnaireContainer>
`;

exports[`<ReplyForm /> should render correctly with only facultatives fields 1`] = `
<ReplyFormstyle__QuestionnaireContainer
  id="reply-form"
  onSubmit={[MockFunction]}
>
  <ReplyFormstyle__ReplyFormContainer
    id="reply-form-container"
  >
    <FieldArray
      change={[MockFunction]}
      component={[Function]}
      disabled={true}
      divClassName="container-questions"
      form="formName"
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      memoize={[Function]}
      memoizeId="2"
      name="responses"
      questions={
        Array [
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "20",
                    "image": null,
                    "title": "Athlétisme",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "21",
                    "image": null,
                    "title": "Natation",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "22",
                    "image": null,
                    "title": "Sports collectifs",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "23",
                    "image": null,
                    "title": "Sports individuels",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 4,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Plusieurs choix sont possibles",
            "hidden": false,
            "id": "11",
            "isOtherAllowed": true,
            "jumps": Array [],
            "number": 3,
            "position": 2,
            "private": false,
            "required": false,
            "title": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "type": "checkbox",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "28",
                    "image": null,
                    "title": "Pas assez fort (Mon sonotone est en panne)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "29",
                    "image": null,
                    "title": "Assez fort (Mon sonotone est mal réglé)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "30",
                    "image": null,
                    "title": "Trop fort (Mon sonotone est tout neuf)",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 3,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Merci de répondre sincèrement",
            "hidden": false,
            "id": "13",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 5,
            "position": 4,
            "private": false,
            "required": false,
            "title": "Nelson Monfort parle-t-il:",
            "type": "select",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "28",
                    "image": null,
                    "title": "Pas assez fort (Mon sonotone est en panne)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "29",
                    "image": null,
                    "title": "Assez fort (Mon sonotone est mal réglé)",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "30",
                    "image": null,
                    "title": "Trop fort (Mon sonotone est tout neuf)",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 3,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Merci de répondre sincèrement",
            "hidden": false,
            "id": "14",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 6,
            "position": 5,
            "private": false,
            "required": false,
            "title": "Nelson Monfort parle-t-il:",
            "type": "ranking",
            "validationRule": null,
          },
        ]
      }
      reply={null}
      responses={
        Array [
          Object {
            "question": "Nelson Monfort parle-t-il:",
            "value": "Trop fort (Mon sonotone est tout neuf)",
          },
          Object {
            "question": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "value": Object {
              "labels": Array [
                "Superman",
              ],
              "other": "Pikachu",
            },
          },
        ]
      }
      typeForm="questionnaire"
      unstable__enableCapcoUiDs={true}
    />
  </ReplyFormstyle__ReplyFormContainer>
  <ReplyFormstyle__ButtonGroupSubmit
    className="btn-toolbar"
  >
    <Connect(SubmitButton)
      bsStyle="info"
      disabled={true}
      id="formName-submit-create-reply"
      label="global.send"
      onSubmit={[Function]}
      style={
        Object {
          "backgroundColor": "#fff000",
          "borderColor": "#fff000",
        }
      }
      type="submit"
    />
  </ReplyFormstyle__ButtonGroupSubmit>
</ReplyFormstyle__QuestionnaireContainer>
`;

exports[`<ReplyForm /> should render correctly with only required fields 1`] = `
<ReplyFormstyle__QuestionnaireContainer
  id="reply-form"
  onSubmit={[MockFunction]}
>
  <ReplyFormstyle__ReplyFormContainer
    id="reply-form-container"
  >
    <FieldArray
      change={[MockFunction]}
      component={[Function]}
      disabled={true}
      divClassName="container-questions"
      form="formName"
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      memoize={[Function]}
      memoizeId="2"
      name="responses"
      questions={
        Array [
          Object {
            "__typename": "SimpleQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 0,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "",
            "hidden": false,
            "id": "10",
            "isOtherAllowed": false,
            "jumps": Array [],
            "number": 2,
            "position": 1,
            "private": false,
            "required": true,
            "title": "Êtes-vous satisfait que la ville de Paris soit candidate à l'organisation des JO de 2024 ?",
            "type": "text",
            "validationRule": null,
          },
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "24",
                    "image": null,
                    "title": "Maxime Arrouard",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "25",
                    "image": null,
                    "title": "Spylou Super Sayen",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "26",
                    "image": null,
                    "title": "Cyril Lage",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "27",
                    "image": null,
                    "title": "Superman",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 4,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Un seul choix possible",
            "hidden": false,
            "id": "12",
            "isOtherAllowed": true,
            "jumps": Array [],
            "number": 4,
            "position": 3,
            "private": false,
            "required": true,
            "title": "Quel est ton athlète favori ?",
            "type": "radio",
            "validationRule": null,
          },
        ]
      }
      reply={null}
      responses={
        Array [
          Object {
            "question": "Nelson Monfort parle-t-il:",
            "value": "Trop fort (Mon sonotone est tout neuf)",
          },
          Object {
            "question": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "value": Object {
              "labels": Array [
                "Superman",
              ],
              "other": "Pikachu",
            },
          },
        ]
      }
      typeForm="questionnaire"
      unstable__enableCapcoUiDs={true}
    />
  </ReplyFormstyle__ReplyFormContainer>
  <ReplyFormstyle__ButtonGroupSubmit
    className="btn-toolbar"
  >
    <Connect(SubmitButton)
      bsStyle="info"
      disabled={true}
      id="formName-submit-create-reply"
      label="global.send"
      onSubmit={[Function]}
      style={
        Object {
          "backgroundColor": "#fff000",
          "borderColor": "#fff000",
        }
      }
      type="submit"
    />
  </ReplyFormstyle__ButtonGroupSubmit>
</ReplyFormstyle__QuestionnaireContainer>
`;

exports[`<ReplyForm /> should render correctly with requirements filled 1`] = `
<ReplyFormstyle__QuestionnaireContainer
  id="reply-form"
  onSubmit={[MockFunction]}
>
  <ReplyFormstyle__ReplyFormContainer
    id="reply-form-container"
  >
    <Section
      level={0}
      typeForm="questionnaire"
    >
      <FormattedMessage
        id="requirements"
        values={Object {}}
      />
    </Section>
    <ReplyFormstyle__WrapperWithMarge
      borderBottom="2px solid #fff000"
      overflow="hidden"
    >
      <Relay(Connect(ReduxForm))
        step={
          Object {
            "$fragmentRefs": null,
            "collectParticipantsEmail": false,
            "id": "step1",
            "isAnonymousParticipationAllowed": false,
            "requirements": Object {
              "reason": null,
              "totalCount": 3,
              "viewerMeetsTheRequirements": true,
            },
            "title": "Step 1",
          }
        }
        stepId="step1"
      />
    </ReplyFormstyle__WrapperWithMarge>
    <FieldArray
      change={[MockFunction]}
      component={[Function]}
      disabled={false}
      divClassName="container-questions"
      form="formName"
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      memoize={[Function]}
      memoizeId="2"
      name="responses"
      questions={
        Array [
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "20",
                    "image": null,
                    "title": "Athlétisme",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "21",
                    "image": null,
                    "title": "Natation",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "22",
                    "image": null,
                    "title": "Sports collectifs",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "23",
                    "image": null,
                    "title": "Sports individuels",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 4,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Plusieurs choix sont possibles",
            "hidden": false,
            "id": "11",
            "isOtherAllowed": true,
            "jumps": Array [],
            "number": 3,
            "position": 2,
            "private": false,
            "required": false,
            "title": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "type": "checkbox",
            "validationRule": null,
          },
        ]
      }
      reply={null}
      responses={
        Array [
          Object {
            "question": "Nelson Monfort parle-t-il:",
            "value": "Trop fort (Mon sonotone est tout neuf)",
          },
          Object {
            "question": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "value": Object {
              "labels": Array [
                "Superman",
              ],
              "other": "Pikachu",
            },
          },
        ]
      }
      typeForm="questionnaire"
      unstable__enableCapcoUiDs={true}
    />
    <hr
      className="mb-30"
    />
    <ReplyFormstyle__WrapperWithMargeX>
      <Field
        component={[Function]}
        disabled={false}
        helpPrint={false}
        id="formName-reply-private"
        name="private"
        type="checkbox"
        typeForm="questionnaire"
      >
        <FormattedMessage
          id="reply.form.private"
          values={Object {}}
        />
      </Field>
    </ReplyFormstyle__WrapperWithMargeX>
  </ReplyFormstyle__ReplyFormContainer>
  <ReplyFormstyle__ButtonGroupSubmit
    className="btn-toolbar"
  >
    <Connect(SubmitButton)
      bsStyle="primary"
      disabled={true}
      id="formName-submit-create-draft-reply"
      label="global.save_as_draft"
      onSubmit={[Function]}
      type="submit"
    />
    <Connect(SubmitButton)
      bsStyle="info"
      disabled={true}
      id="formName-submit-create-reply"
      label="global.send"
      onSubmit={[Function]}
      style={
        Object {
          "backgroundColor": "#fff000",
          "borderColor": "#fff000",
        }
      }
      type="submit"
    />
  </ReplyFormstyle__ButtonGroupSubmit>
</ReplyFormstyle__QuestionnaireContainer>
`;

exports[`<ReplyForm /> should render correctly with requirements not full filled 1`] = `
<ReplyFormstyle__QuestionnaireContainer
  id="reply-form"
  onSubmit={[MockFunction]}
>
  <ReplyFormstyle__ReplyFormContainer
    id="reply-form-container"
  >
    <Section
      level={0}
      typeForm="questionnaire"
    >
      <FormattedMessage
        id="requirements"
        values={Object {}}
      />
    </Section>
    <ReplyFormstyle__WrapperWithMarge
      borderBottom="2px solid #fff000"
      overflow="hidden"
    >
      <Relay(Connect(ReduxForm))
        step={
          Object {
            "$fragmentRefs": null,
            "collectParticipantsEmail": false,
            "id": "step1",
            "isAnonymousParticipationAllowed": false,
            "requirements": Object {
              "reason": null,
              "totalCount": 3,
              "viewerMeetsTheRequirements": false,
            },
            "title": "Step 1",
          }
        }
        stepId="step1"
      />
    </ReplyFormstyle__WrapperWithMarge>
    <FieldArray
      change={[MockFunction]}
      component={[Function]}
      disabled={false}
      divClassName="container-questions"
      form="formName"
      intl={
        Object {
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "locale": "fr-FR",
          "messages": Object {},
          "now": [Function],
        }
      }
      memoize={[Function]}
      memoizeId="2"
      name="responses"
      questions={
        Array [
          Object {
            "__typename": "MultipleChoiceQuestion",
            "alwaysJumpDestinationQuestion": null,
            "choices": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "20",
                    "image": null,
                    "title": "Athlétisme",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "21",
                    "image": null,
                    "title": "Natation",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "22",
                    "image": null,
                    "title": "Sports collectifs",
                  },
                },
                Object {
                  "node": Object {
                    "color": null,
                    "description": "description",
                    "id": "23",
                    "image": null,
                    "title": "Sports individuels",
                  },
                },
              ],
              "pageInfo": Object {
                "hasNextPage": false,
              },
              "totalCount": 4,
            },
            "description": "description of question",
            "destinationJumps": Array [],
            "helpText": "Plusieurs choix sont possibles",
            "hidden": false,
            "id": "11",
            "isOtherAllowed": true,
            "jumps": Array [],
            "number": 3,
            "position": 2,
            "private": false,
            "required": false,
            "title": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "type": "checkbox",
            "validationRule": null,
          },
        ]
      }
      reply={null}
      responses={
        Array [
          Object {
            "question": "Nelson Monfort parle-t-il:",
            "value": "Trop fort (Mon sonotone est tout neuf)",
          },
          Object {
            "question": "Pour quel type d'épreuve êtes vous prêt à acheter des places",
            "value": Object {
              "labels": Array [
                "Superman",
              ],
              "other": "Pikachu",
            },
          },
        ]
      }
      typeForm="questionnaire"
      unstable__enableCapcoUiDs={true}
    />
    <hr
      className="mb-30"
    />
    <ReplyFormstyle__WrapperWithMargeX>
      <Field
        component={[Function]}
        disabled={false}
        helpPrint={false}
        id="formName-reply-private"
        name="private"
        type="checkbox"
        typeForm="questionnaire"
      >
        <FormattedMessage
          id="reply.form.private"
          values={Object {}}
        />
      </Field>
    </ReplyFormstyle__WrapperWithMargeX>
  </ReplyFormstyle__ReplyFormContainer>
  <ReplyFormstyle__ButtonGroupSubmit
    className="btn-toolbar"
  >
    <Connect(SubmitButton)
      bsStyle="primary"
      disabled={true}
      id="formName-submit-create-draft-reply"
      label="global.save_as_draft"
      onSubmit={[Function]}
      type="submit"
    />
    <Connect(SubmitButton)
      bsStyle="info"
      disabled={true}
      id="formName-submit-create-reply"
      label="global.send"
      onSubmit={[Function]}
      style={
        Object {
          "backgroundColor": "#fff000",
          "borderColor": "#fff000",
        }
      }
      type="submit"
    />
  </ReplyFormstyle__ButtonGroupSubmit>
</ReplyFormstyle__QuestionnaireContainer>
`;
